<resources>
    <string name="app_name">Occupancy Tracker</string>
    <string name="stored_data">Stored Data</string>
    <string name="view_occupancy">View Occupancy</string>
    <string name="connect_device">Connect Device</string>
    <string name="occupancy">Occupancy:</string>
    <string name="bluetooth_devices">Bluetooth Devices</string>
    <string name="options">Options</string>
    <string name="export_data">Export Data</string>
    <string name="no_bluetooth_devices">No Bluetooth devices were found.</string>
    <string name="no_stored_data">No data has been saved to this device.</string>
    <string name="save_selected_device_key">SelectedBluetoothDevice</string>
    <string name="shared_preferences_file_key">com.example.occupancytracker.bluetooth</string>
    <string name="ceiling_height">Ceiling Height (m)</string>
    <string name="reset_occupancy">Reset Occupancy Number</string>
    <string name="device_off">Device Off</string>
    <string name="device_on">Device On</string>
</resources>