<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:theme="@style/Theme.OccupancyTracker"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:color="@color/white"
        android:background="@color/design_default_color_primary"
        app:title="@string/app_name"
        android:theme="@style/toolbarStyle"
        />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textSize="60sp"
        android:textStyle="bold"
        android:layout_marginVertical="50dp"
        />

    <Button
        android:id="@+id/button3"
        android:onClick="viewData"
        android:text="@string/view_occupancy"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="50dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:theme="@style/buttonStyle"
        />

    <Button
        android:id="@+id/button2"
        android:onClick="viewDevices"
        android:text="@string/stored_data"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="50dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:theme="@style/buttonStyle"
        />

    <Button
        android:id="@+id/button"
        android:onClick="viewOccupancy"
        android:text="@string/connect_device"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="50dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:theme="@style/buttonStyle"
        />

</LinearLayout>