<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:theme="@style/Theme.OccupancyTracker"
    tools:context=".OccupancyActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        app:title="@string/app_name"
        android:theme="@style/toolbarStyle"
        app:titleTextColor="@color/colorOnPrimary"
        />

    <RelativeLayout
        android:layout_alignParentTop="true"
        android:layout_marginTop="55dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentStart="true"
        android:layout_gravity="fill">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="20dp"
            android:textSize="30dp"
            android:textColor="@color/colorPrimary"
            android:text="84%" />

        <ImageView
            android:id="@+id/refresh"
            android:onClick="refreshData"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            android:src="@drawable/refresh_circle" />
    </RelativeLayout>

    <LinearLayout
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content">
        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/occupancy"
            android:textAlignment="center"
            android:textSize="50sp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/occupancy_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="123"
            android:textAlignment="center"
            android:textSize="50sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal"
        android:gravity="center">
        <Button
            android:id="@+id/options_button"
            android:text="@string/view_occupancy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme="@style/buttonStyle"
            android:layout_marginRight="20dp"
            android:textSize="15dp"
            />

        <Button
            android:id="@+id/export_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/view_occupancy"
            android:textSize="15dp"
            android:theme="@style/buttonStyle" />
    </LinearLayout>

</RelativeLayout>